Improve the toggle-switch design and include nav links

--- a/index.html
+++ b/index.html
@@ -35,14 +35,16 @@
 
     <!-- main navigation -->
     <nav id="nav">
-      <a href="#"><img class="nav-icon" src="svgs/home.svg" alt="home" /></a>
-      <a href="#"
+      <a href="#main"
+        ><img class="nav-icon" src="svgs/home.svg" alt="home"
+      /></a>
+      <a href="#daily-traffic"
         ><img class="nav-icon" src="svgs/bar-chart.svg" alt="traffic"
       /></a>
-      <a href="#"
+      <a href="#new-members"
         ><img class="nav-icon" src="svgs/members.svg" alt="members"
       /></a>
-      <a href="#"
+      <a href="#settings-login"
         ><img class="nav-icon" src="svgs/settings.svg" alt="settings"
       /></a>
     </nav>
@@ -80,7 +82,7 @@
       </section>
 
       <!-- daily traffic: bar graph-->
-      <section class="daily">
+      <section id="daily-traffic" class="daily">
         <h3 class="uppercase">Daily Traffic</h3>
         <div class="widget-container-half">
           <!-- element chart.js will insert bar graph into -->
@@ -156,7 +158,7 @@
       </section>
 
       <!-- members -->
-      <section class="members">
+      <section id="new-members" class="members">
         <h3 class="uppercase section-heading">New Members</h3>
         <div class="members-container">
           <div class="member-info">
@@ -309,7 +311,7 @@
       </section>
 
       <!-- settings widget-->
-      <section class="settings">
+      <section id="settings-login" class="settings">
         <h3 class="section-heading uppercase">Settings</h3>
 
         <!-- customer CSS toggle code-->
