Add pop-up notifications

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
       </div>
     </header>
 
+    <!-- Notifcations-->
+
+    <div class="notification-container">
+      <div id="overlay">
+        <ul class="notifications">
+          <li>Monthly Staff Meeting at 9:30 am<span class="close">x</span></li>
+          <li>Voicemail Messages (2)<span class="close">x</span></li>
+          <li>Unread Email Messages (99)<span class="close">x</span></li>
+        </ul>
+      </div>
+    </div>
+
     <!-- main navigation -->
     <nav id="nav">
       <a href="#main"
