--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         <div class="traffic-header">
           <h3 class="section-heading uppercase">Traffic</h3>
           <ul class="traffic-nav">
-            <li class="traffic-nav-link active">Hourly</li>
-            <li class="traffic-nav-link">Daily</li>
-            <li class="traffic-nav-link">Weekly</li>
-            <li class="traffic-nav-link">Monthly</li>
+            <li id="hourly" class="traffic-nav-link">Hourly</li>
+            <li id="daily" class="traffic-nav-link">Daily</li>
+            <li id="weekly" class="traffic-nav-link active">Weekly</li>
+            <li id="montly" class="traffic-nav-link">Monthly</li>
           </ul>
         </div>
         <div class="widget-container-full">
@@ -381,5 +381,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/app.js"></script>
+    <script src="js/chart.js"></script>
   </body>
 </html>
